header + sidebar svg img

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -3,7 +3,7 @@
     <div class="headerText">Kanban Project Management Tool</div>
     <div class="headerIcons">
         <a class="header-help" href="help.html" id="id-6">
-            <div><img src="./img/help-icon.png">
+            <div><img class="help-icon" src="./img/help.svg">
             </div>
         </a>
         <div>
