--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -1,5 +1,5 @@
 <div class="navMainContent" id="navMainContent">
-    <img class="navLogo" src="./img/join-logo.png">
+    <img class="navLogo" src="./img/join-logo.svg">
 
     <div class="navMenu" id="sidebar-menu">
         <a class="navLink" href="summary.html" id="id-0">
