--- a/css/contacts-overlay.css
+++ b/css/contacts-overlay.css
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
+    overflow: hidden;
 }
 
 .addContactContainer {
@@ -17,6 +18,12 @@
     background: #2A3647;
     border-radius: 30px;
     display: flex;
+    transform: translateX(150%);
+    transition: all .2s ease-in-out;
+}
+
+.transform-0 {
+    transform: translateX(0);
 }
 
 .addContactLeftPart {
