--- a/css/contacts-overlay.css
+++ b/css/contacts-overlay.css
@@ -1,357 +1,357 @@
 .overlay-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(12, 12, 12, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(12, 12, 12, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  overflow: hidden;
 }
 
 .addContactContainer {
-    width: 1150px;
-    height: 530px;
-    background: #2A3647;
-    border-radius: 30px;
-    display: flex;
-    transform: translateX(150%);
-    transition: all .2s ease-in-out;
+  width: 1150px;
+  height: 530px;
+  background: #2a3647;
+  border-radius: 30px;
+  display: flex;
+  transform: translateX(150%);
+  transition: all 0.2s ease-in-out;
 }
 
 .transform-0 {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .addContactLeftPart {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 66px 46px;
-    gap: 12px;
-    width: 463px;
-    height: 530px;
-    box-sizing: border-box;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 66px 46px;
+  gap: 12px;
+  width: 463px;
+  height: 530px;
+  box-sizing: border-box;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
 }
 
 .addContactJoinLogo {
-    width: 55px;
-    height: 66px;
+  width: 55px;
+  height: 66px;
 }
 
 .overlayHeadline {
-    width: 366px;
-    height: 73px;
-    font-weight: 700;
-    font-size: 61px;
-    color: #FFFFFF;
+  width: 366px;
+  height: 73px;
+  font-weight: 700;
+  font-size: 61px;
+  color: #ffffff;
 }
 
 .textTasksAre {
-    width: 371px;
-    height: 32px;
-    font-weight: 400;
-    font-size: 27px;
-    color: #FFFFFF;
+  width: 371px;
+  height: 32px;
+  font-weight: 400;
+  font-size: 27px;
+  color: #ffffff;
 }
 
 .textTasksAre-border {
-    width: 90px;
-    height: 3px;
-    background: #29ABE2;
+  width: 90px;
+  height: 3px;
+  background: #29abe2;
 }
 
 .addContactRightPart {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    width: 100%;
-    height: 100%;
-    padding: 50px;
-    background: #FFFFFF;
-    border-top-right-radius: 30px;
-    border-bottom-right-radius: 30px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+  background: #ffffff;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 .closeAddContact {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    top: -65px;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: -65px;
 }
 
 .closeAddContact:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .closeAddContact-rs {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    top: -65px;
-    display: none;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  top: -65px;
+  display: none;
 }
 
 .closeAddContact-rs:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .userInfo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .userIconConteiner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    width: 120px;
-    height: 120px;
-    background: #D1D1D1;
-    border: 3px solid #FFFFFF;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 120px;
+  height: 120px;
+  background: #d1d1d1;
+  border: 3px solid #ffffff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 70px;
 }
 
 .userWhiteIcon {
-    width: 41px;
-    height: 54px;
+  width: 41px;
+  height: 54px;
 }
 
 .contactDetailsContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 29px;
-    width: 422px;
-    height: 271px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 29px;
+  width: 422px;
+  height: 271px;
 }
 
 .contactsDetailsFrame {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    width: 422px;
-    height: 71px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  width: 422px;
+  height: 71px;
 }
 
 .style-input {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    padding: 13px 21px;
-    gap: 10px;
-    width: 422px;
-    height: 51px;
-    border: 1px solid #D1D1D1;
-    border-radius: 10px;
-    outline: none;
-    font-size: 20px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  padding: 13px 21px;
+  gap: 10px;
+  width: 422px;
+  height: 51px;
+  border: 1px solid #d1d1d1;
+  border-radius: 10px;
+  outline: none;
+  font-size: 20px;
 }
 
 ::placeholder {
-    color: #D1D1D1;
-    font-family: 'Inter';
-    font-size: 21px;
-    display: flex;
-    position: absolute;
+  color: #d1d1d1;
+  font-family: "Inter";
+  font-size: 21px;
+  display: flex;
+  position: absolute;
 }
 
 .styleUserIcon {
-    background: url(../img/contacts/user-grey.png) no-repeat;
-    background-size: 16px 21px;
-    background-position-x: 380px;
-    background-position-y: 15px;
+  background: url(../img/user-grey.svg) no-repeat;
+  background-size: 16px 21px;
+  background-position-x: 380px;
+  background-position-y: 15px;
 }
 
 .styleUserLetter {
-    background: url(../img/contacts/letter.png) no-repeat;
-    background-size: 20px 18px;
-    background-position-x: 380px;
-    background-position-y: 15px;
+  background: url(../img/letter.svg) no-repeat;
+  background-size: 20px 18px;
+  background-position-x: 380px;
+  background-position-y: 15px;
 }
 
 .input-icon-phone {
-    background: url(../img/contacts/phone.png) no-repeat;
-    background-size: 20px;
-    background-position-x: 380px;
-    background-position-y: 15px;
+  background: url(../img/phone.svg) no-repeat;
+  background-size: 20px;
+  background-position-x: 380px;
+  background-position-y: 15px;
 }
 
 .overlay-btn-frame {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-    width: 369px;
-    height: 61px;
-    margin-right: 53px;
-    position: relative;
-    top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  width: 369px;
+  height: 61px;
+  margin-right: 53px;
+  position: relative;
+  top: 30px;
 }
 
 .overlay-cancel-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 18px 10px;
-    gap: 10px;
-    width: 136px;
-    height: 50px;
-    border: 1px solid #2A3647;
-    border-radius: 10px;
-    box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 18px 10px;
+  gap: 10px;
+  width: 136px;
+  height: 50px;
+  border: 1px solid #2a3647;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .overlay-cancel-btn:hover {
-    border: 2px solid #29ABE2;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    cursor: pointer;
+  border: 2px solid #29abe2;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  cursor: pointer;
 }
 
 .overlay-cancel-btn:hover .overlay-cancel-btn-text {
-    color: #29ABE2;
+  color: #29abe2;
 }
 
 .overlay-cancel-btn:hover .overlay-cancel-btn-image {
-    background-image: url(../img/contacts/cancel-icon-blue.png);
+  background-image: url(../img/contacts/cancel-icon-blue.png);
 }
 
 .overlay-cancel-btn-image {
-    background-image: url(../img/contacts/cancel-icon.png);
-    background-size: 28px 28px;
-    background-position: center;
-    width: 24px;
-    height: 24px;
+  background-image: url(../img/contacts/cancel-icon.png);
+  background-size: 28px 28px;
+  background-position: center;
+  width: 24px;
+  height: 24px;
 }
 
 .overlay-cancel-btn-text {
-    width: 69px;
-    height: 25px;
-    font-size: 21px;
-    color: #2A3647;
+  width: 69px;
+  height: 25px;
+  font-size: 21px;
+  color: #2a3647;
 }
 
 .overlay-create-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 18px 10px;
-    gap: 10px;
-    width: 208px;
-    height: 50px;
-    background: #2A3647;
-    border-radius: 10px;
-    box-sizing: border-box;
-    border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 18px 10px;
+  gap: 10px;
+  width: 208px;
+  height: 50px;
+  background: #2a3647;
+  border-radius: 10px;
+  box-sizing: border-box;
+  border: none;
 }
 
 .overlay-create-btn:hover {
-    cursor: pointer;
-    background: #29ABE2;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  background: #29abe2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .overlay-create-btn-text {
-    width: 154px;
-    height: 25px;
-    font-weight: 500;
-    font-size: 21px;
-    color: #FFFFFF;
+  width: 154px;
+  height: 25px;
+  font-weight: 500;
+  font-size: 21px;
+  color: #ffffff;
 }
 
 .d-none {
-    display: none;
+  display: none;
 }
 
 .overlay-save-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 18px 10px;
-    width: 150px;
-    height: 50px;
-    background: #2A3647;
-    border-radius: 10px;
-    box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 18px 10px;
+  width: 150px;
+  height: 50px;
+  background: #2a3647;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .overlay-save-btn:hover {
-    cursor: pointer;
-    background: #29ABE2;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  background: #29abe2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .overlay-save-btn-text {
-    font-weight: 500;
-    font-size: 21px;
-    color: #FFFFFF;
+  font-weight: 500;
+  font-size: 21px;
+  color: #ffffff;
 }
 
 .overlay-user-initials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 120px;
-    height: 120px;
-    background: #29ABE2;
-    border: 3px solid #FFFFFF;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 70px;
-    color: #FFFFFF;
-    font-size: 35px;
-    position: relative;
-    top: -32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 120px;
+  background: #29abe2;
+  border: 3px solid #ffffff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 70px;
+  color: #ffffff;
+  font-size: 35px;
+  position: relative;
+  top: -32px;
 }
 
 .overlay-save-frame {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    margin-right: 53px;
-    position: relative;
-    top: 30px;
-    border: none;
-    background-color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  margin-right: 53px;
+  position: relative;
+  top: 30px;
+  border: none;
+  background-color: #ffffff;
 }
 
 .red-text {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    color: red;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: red;
+  width: 100%;
 }
 .backContactsButton {
-    background: #2A3647;
-    border: none;
-    border-radius: 10px;
-    color: white;
-    padding-top: 9px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-weight: 100;
-    font-size: 21px;
-    cursor: pointer;
-    margin-left: 35px;
-    height: 43px;
-    margin-right: 200px;
+  background: #2a3647;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  padding-top: 9px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: 100;
+  font-size: 21px;
+  cursor: pointer;
+  margin-left: 35px;
+  height: 43px;
+  margin-right: 200px;
 }
 .backNewButton:hover {
-    background-color: #0D99FF;
+  background-color: #0d99ff;
 }
