Add new Contact function

--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -26,7 +26,8 @@
                 </div>
             </div>
         </a>
-        <a class="navLink" href="contacts.html" id="id-3">
+        <!-- copy version nur zum testen  -->
+        <a class="navLink" href="contacts_copy.html" id="id-3"> 
             <div class="navCategory">
                 <div class="navCategory-inner-frame">
                     <img src="./img/contacts-icon.svg">
