--- a/css/contacts-overlay.css
+++ b/css/contacts-overlay.css
@@ -226,11 +226,11 @@
 }
 
 .overlay-cancel-btn:hover .overlay-cancel-btn-image {
-  background-image: url(../img/contacts/cancel-icon-blue.png);
+  background-image: url(../img/cancel-icon-blue.png);
 }
 
 .overlay-cancel-btn-image {
-  background-image: url(../img/contacts/cancel-icon.png);
+  background-image: url(../img/cancel-icon.png);
   background-size: 28px 28px;
   background-position: center;
   width: 24px;
@@ -280,12 +280,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 18px 10px;
-  width: 150px;
-  height: 50px;
+  padding: 16px;
   background: #2a3647;
   border-radius: 10px;
   box-sizing: border-box;
+  gap: 4px;
 }
 
 .overlay-save-btn:hover {
@@ -295,7 +294,7 @@
 }
 
 .overlay-save-btn-text {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 21px;
   color: #ffffff;
 }
@@ -318,13 +317,10 @@
 
 .overlay-save-frame {
   display: flex;
+  padding: 16px;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 50px;
-  margin-right: 53px;
   position: relative;
-  top: 30px;
   border: none;
   background-color: #ffffff;
 }
