--- a/css/login.css
+++ b/css/login.css
@@ -32,7 +32,7 @@ html, body {
 }
 
 .login-signup-text {
-    font-size: 1rem;
+    font-size: 1.25rem;
     color: black;
 }
 
@@ -103,18 +103,63 @@ html, body {
     }
 }
 
+@keyframes logo-animation991 {
+    from {
+        width: 300px;
+        height: 300px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    to {
+        width: 110px;
+        height: 110px;
+        top: 3rem;
+        left: 4rem;
+    }
+}
+
+@keyframes logo-animation767 {
+    from {
+        width: 200px;
+        height: 200px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    to {
+        width: 80px;
+        height: 80px;
+        top: 2rem;
+        left: 2rem;
+    }
+}
+
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: calc(100% - 51.5px);
+}
+
+.login-card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 51.5px;
 }
 
 .login-card {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.07);
-    width: 600px;
+    max-width: 632px;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 .login-heading {
@@ -223,12 +268,24 @@ input:focus {
     font-size: 1rem;
 }
 
+.register-card-container {
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 83.5px;
+    display: flex;
+    justify-content: center;
+}
+
 .register-card {
     position: relative;
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.07);
-    width: 600px;
+    max-width: 632px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%;
 }
 
 .register-heading {
@@ -296,13 +353,10 @@ input:focus {
 }
 
 .footer-container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 2rem;
     display: flex;
     justify-content: center;
     gap: 2rem;
+    padding-bottom: 2rem;
 }
 
 .footer-link {
