--- a/css/header.css
+++ b/css/header.css
@@ -107,6 +107,8 @@ header {
 @media (max-width: 850px) {
   header {
     padding: 20px 25px;
+    position: fixed;
+    z-index: 99;
   }
 
   .headerJoinLogo {
