--- a/assets/templates/header_out.html
+++ b/assets/templates/header_out.html
@@ -1,5 +1,5 @@
 <header>
-    <img class="headerJoinLogo" src="./img/favicon/join-favicon.png">
+    <img class="headerJoinLogo" src="./img/join-logo-blue.svg">
     <div class="headerText">Kanban Project Management Tool</div>
     <!-- <div class="headerIcons">
         <a class="header-help" href="help.html" id="id-6">
