--- a/css/task.css
+++ b/css/task.css
@@ -1,5 +1,5 @@
 .main {
-    padding: 5rem 2rem 0 21rem;
+    padding: 80px 64px 0 294px;
 }
 
 .main-container {
@@ -14,8 +14,7 @@
 
 .task-form-container {
     position: relative;
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+    padding: 3rem 0.15rem 3rem 0.15rem;
     max-width: 1040px;
     overflow: hidden;
 }
@@ -539,47 +538,6 @@
 .assign-contact-selected:hover {
     background-color: #1c2635;
 }
-
-.bg-lightblue {
-    background-color: #87cefa;
-}
-
-.bg-orange {
-    background-color: #ffa500;
-}
-
-.bg-violet1 {
-    background-color: #462F8A;
-}
-
-.bg-violet2 {
-    background-color: #ee82ee;
-}
-
-.bg-pink {
-    background-color: #c16dee;
-}
-
-.bg-yellow {
-    background-color: #ffd700;
-}
-
-.bg-salmon {
-    background-color: #ffa07a;
-}
-
-.bg-lightgreen {
-    background-color: #1FD7C1
-}
-
-.bg-blue {
-    background-color: #0038FF;
-}
-
-.bg-green {
-    background-color: #009b00;
-}
-
 
 .b-shadow {
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.16);
