--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,14 +1,14 @@
 <header>
-    <img class="headerJoinLogo" src="./img/join-logo-blue.svg">
-    <div class="headerText">Kanban Project Management Tool</div>
-    <div class="headerIcons">
-        <a class="header-help" href="help.html" id="id-6">
-            <div><img class="help-icon" src="./img/help.svg">
-            </div>
-        </a>
-        <div>
-            <img class="userImage" src="./img/profile-img.png" onclick="showLogout()">
-        </div>
+  <img class="headerJoinLogo" src="./img/join-logo-blue.svg" />
+  <div class="headerText">Kanban Project Management Tool</div>
+  <div class="headerIcons">
+    <a class="header-help" href="help.html" id="id-6">
+      <div><img class="help-icon" src="./img/help.svg" /></div>
+    </a>
+    <div>
+      <div id="userInitials" class="userImage" onclick="showLogout()"></div>
+      <!-- <img class="userImage" src="./img/profile-img.png" onclick="showLogout()"> -->
     </div>
+  </div>
 </header>
 <div id="header-logout"></div>
