--- a/css/header.css
+++ b/css/header.css
@@ -39,10 +39,17 @@ header {
   border-radius: 100%;
   border: 2px solid black;
   cursor: pointer;
+  font-size: 28px;
+  font-weight: 600;
+  color: #29abe2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .userImage:hover {
   cursor: pointer;
+  background-color: #e2e6ec;
 }
 
 .logout-btn {
