Only 1 Contact Page
Margin for fixed Header on: Bord, summary & Contacts
task in bord responsiv
revert back arrow/ legal notice out

--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -27,7 +27,7 @@
             </div>
         </a>
         <!-- copy version nur zum testen  -->
-        <a class="navLink" href="contacts_copy.html" id="id-3"> 
+        <a class="navLink" href="contacts.html" id="id-3"> 
             <div class="navCategory">
                 <div class="navCategory-inner-frame">
                     <img src="./img/contacts-icon.svg">
