--- a/css/contacts.css
+++ b/css/contacts.css
@@ -489,6 +489,44 @@ body {
   justify-content: center;
 }
 
+.contact-success {
+  position: absolute;
+  height: 100vh;
+  z-index: 99;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-success-container {
+  background-color: #2A3647;
+  border-radius: 0.5rem;
+  padding: 1rem 2.5rem;
+  opacity: 0;
+  transform: translateY(800%);
+  transition: all .25s ease-in-out;
+}
+
+.translate-0 {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.visible {
+  visibility: visible;
+}
+
+.success-message {
+  color: white;
+  font-size: 1.25rem;
+  text-align: center;
+}
+
 @media (max-width: 1199.98px) {
   .contactNameInfo {
     font-size: 36px;
