--- a/css/task.css
+++ b/css/task.css
@@ -663,9 +663,42 @@
     }
 }
 
+.success-contact {
+    position: absolute;
+    z-index: 99;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.success-contact-container {
+    display: flex;
+    background-color: #2A3647;
+    border-radius: 0.5rem;
+    padding: 1rem 2.5rem;
+    opacity: 0;
+    transform: translateY(600%);
+    transition: all .25s ease-in-out;
+}
+
+.translate-100 {
+    opacity: 1;
+    transform: translateY(-100%);
+}
+
+.visible {
+    visibility: visible;
+}
+
 .success-message {
     color: white;
     font-size: 1.25rem;
+    text-align: center;
 }
 
 .board-icon {
