--- a/css/contacts.css
+++ b/css/contacts.css
@@ -502,6 +502,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .contact-success-container {
