Contact Header fix / CSS
Board hover pointer
Contacts email word break

--- a/css/board.css
+++ b/css/board.css
@@ -181,6 +181,10 @@ button:hover {
   font-weight: 400;
 }
 
+.todo:hover {
+  cursor: pointer;
+}
+
 .toDoCategory {
   padding: 4px 16px;
   border-radius: 16px;
