--- a/css/summary.css
+++ b/css/summary.css
@@ -1,6 +1,7 @@
 .summaryContent {
   margin-left: 296px;
-  margin-top: 120px;
+  margin-top: 80px;
+  margin-bottom: 48px;
   width: calc(100% - 328px);
   display: flex;
   flex-direction: column;
